feat: Implemented ExporterFactories feature #22446
- This is an alternative way to create new instances of exporters